src/test/ui/unboxed-closures/unboxed-closures-borrow-conflict.stderr
error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/unboxed-closures-borrow-conflict.rs:9:9
   |
LL |     let f = || x += 1;
   |             -- borrow of `x` occurs here
LL |     let _y = x; //~ ERROR cannot use `x` because it was mutably borrowed
   |         ^^ use of borrowed `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
